--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.23",
+    "@ai-sdk/react": "^2.0.28",
     "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/lang-sql": "^6.9.1",
     "@uiw/codemirror-theme-github": "^4.25.1",
     "@uiw/react-codemirror": "^4.25.1",
+    "ai": "^5.0.28",
     "dotenv": "^17.2.1",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
