--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
   "dependencies": {
     "@ai-sdk/openai": "^2.0.23",
     "@ai-sdk/react": "^2.0.28",
+    "@auth/prisma-adapter": "^2.10.0",
     "@codemirror/lang-javascript": "^6.2.4",
     "@codemirror/lang-sql": "^6.9.1",
+    "@prisma/client": "^6.15.0",
     "@uiw/codemirror-theme-github": "^4.25.1",
     "@uiw/react-codemirror": "^4.25.1",
     "ai": "^5.0.28",
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.1",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
-    "nodemailer": "^7.0.6",
+    "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.1",
     "openai": "^5.16.0",
+    "prisma": "^6.15.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
