--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^2.0.23",
     "@ai-sdk/react": "^2.0.28",
-    "@auth/prisma-adapter": "^2.10.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@codemirror/lang-javascript": "^6.2.4",
     "@codemirror/lang-sql": "^6.9.1",
     "@codemirror/lang-xml": "^6.1.0",
@@ -24,7 +24,7 @@
     "lucide-react": "^0.542.0",
     "next": "15.5.9",
     "next-auth": "^4.24.11",
-    "nodemailer": "^6.10.1",
+    "nodemailer": "^7.0.12",
     "openai": "^5.16.0",
     "prisma": "^6.15.0",
     "react": "19.1.2",
